Mejoras generales en el servidor intermedio: * Ahora se puede limitar el tamaño de los ficheros. * Se borran los ficheros caducados tanto en almacén como en recuperación. * Solo se borran los ficheros propios, no se tocan los ajenos.